--- a/ntp.conf
+++ b/ntp.conf
@@ -14,13 +14,18 @@ filegen clockstats file clockstats type day enable
 # You do need to talk to an NTP server or two (or three).
 #server ntp.your-provider.example
 
+server 0.be.pool.ntp.org
+server 1.be.pool.ntp.org
+server 2.be.pool.ntp.org
+server 3.be.pool.ntp.org
+
 # pool.ntp.org maps to about 1000 low-stratum NTP servers.  Your server will
 # pick a different set every time it starts up.  Please consider joining the
 # pool: <http://www.pool.ntp.org/join.html>
-pool 0.debian.pool.ntp.org iburst
-pool 1.debian.pool.ntp.org iburst
-pool 2.debian.pool.ntp.org iburst
-pool 3.debian.pool.ntp.org iburst
+# pool 0.debian.pool.ntp.org iburst
+# pool 1.debian.pool.ntp.org iburst
+# pool 2.debian.pool.ntp.org iburst
+# pool 3.debian.pool.ntp.org iburst
 
 
 # Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
@@ -34,6 +39,10 @@ pool 3.debian.pool.ntp.org iburst
 # By default, exchange time with everybody, but don't allow configuration.
 restrict -4 default kod notrap nomodify nopeer noquery limited
 restrict -6 default kod notrap nomodify nopeer noquery limited
+
+#mrt
+restrict 193.191.177.6
+restrict -6 2001:6a8:2880:a021::6 
 
 # Local users may interrogate the ntp server more closely.
 restrict 127.0.0.1
