--- a/powerdns/pdns.conf
+++ b/powerdns/pdns.conf
@@ -7,7 +7,7 @@
 #################################
 # allow-axfr-ips	Allow zonetransfers only to these subnets
 #
-# allow-axfr-ips=127.0.0.0/8,::1
+# allow-axfr-ips=127.0.0.0/8,::1,193.191.176.254,193.191.177.4
 
 #################################
 # allow-dnsupdate-from	A global setting to allow DNS updates from these IP ranges.
@@ -162,7 +162,7 @@
 #################################
 # disable-axfr	Disable zonetransfers but do allow TCP queries
 #
-# disable-axfr=no
+disable-axfr=no
 
 #################################
 # disable-axfr-rectify	Disable the rectify step during an outgoing AXFR. Only required for regression testing.
@@ -305,6 +305,7 @@ launch=
 # master	Act as a master
 #
 # master=no
+master=yes
 
 #################################
 # max-cache-entries	Maximum number of cache entries
