--- a/powerdns/pdns.conf
+++ b/powerdns/pdns.conf
@@ -7,7 +7,7 @@
 #################################
 # allow-axfr-ips	Allow zonetransfers only to these subnets
 #
-# allow-axfr-ips=127.0.0.0/8,::1,193.191.176.254,193.191.177.4
+allow-axfr-ips=127.0.0.0/8,::1,193.191.176.254,193.191.177.4
 
 #################################
 # allow-dnsupdate-from	A global setting to allow DNS updates from these IP ranges.
