added acces restrictions

--- a/apache2/sites-available/www1.arne-vandebemdt.sb.uclllabs.be.conf
+++ b/apache2/sites-available/www1.arne-vandebemdt.sb.uclllabs.be.conf
@@ -4,4 +4,11 @@
     DocumentRoot /var/www/www1.arne-vandebemdt.sb.uclllabs.be/html
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+	<Directory /var/www/www1.arne-vandebemdt.sb.uclllabs.be/html/private>
+    		AuthType Basic
+        	AuthName "Restricted Content"
+        	AuthUserFile /usr/local/.htpasswd
+        	Require valid-user
+	</Directory>
 </VirtualHost>
