added host specific error logging

--- a/apache2/sites-available/www1.arne-vandebemdt.sb.uclllabs.be.conf
+++ b/apache2/sites-available/www1.arne-vandebemdt.sb.uclllabs.be.conf
@@ -2,8 +2,8 @@
     ServerAdmin admin@mail.arne-vandebemdt.sb.uclllabs.be
     ServerName www1.arne-vandebemdt.sb.uclllabs.be
     DocumentRoot /var/www/www1.arne-vandebemdt.sb.uclllabs.be/html
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/www1-error.log
+    CustomLog ${APACHE_LOG_DIR}/www1-access.log combined
 
 	<Directory /var/www/www1.arne-vandebemdt.sb.uclllabs.be/html/private>
     		AuthType Basic
