--- a/apache2/sites-available/www2.arne-vandebemdt.sb.uclllabs.be.conf
+++ b/apache2/sites-available/www2.arne-vandebemdt.sb.uclllabs.be.conf
@@ -2,6 +2,6 @@
     ServerAdmin admin@mail.arne-vandebemdt.sb.uclllabs.be
     ServerName www2.arne-vandebemdt.sb.uclllabs.be
     DocumentRoot /var/www/www2.arne-vandebemdt.sb.uclllabs.be/html
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/www2-error.log
+    CustomLog ${APACHE_LOG_DIR}/www2-access.log combined
 </VirtualHost>
