--- a/mysql/mysql.conf.d/mysqld.cnf
+++ b/mysql/mysql.conf.d/mysqld.cnf
@@ -22,9 +22,11 @@
 [mysqld]
 pid-file	= /var/run/mysqld/mysqld.pid
 socket		= /var/run/mysqld/mysqld.sock
+port            = 3306
 datadir		= /var/lib/mysql
 log-error	= /var/log/mysql/error.log
 # By default we only accept connections from localhost
 # bind-address	= 127.0.0.1
+bind-address	= 193.191.177.132
 # Disabling symbolic-links is recommended to prevent assorted security risks
 symbolic-links=0
