added slave configuration for tom-daniel

--- a/powerdns/pdns.conf
+++ b/powerdns/pdns.conf
@@ -462,6 +462,7 @@ setuid=pdns
 # slave	Act as a slave
 #
 # slave=no
+slave=yes
 
 #################################
 # slave-cycle-interval	Schedule slave freshness checks once every .. seconds
