--- a/apache2/sites-available/000-default.conf
+++ b/apache2/sites-available/000-default.conf
@@ -6,7 +6,8 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
-	#ServerName www.example.com
+	ServerName arne-vandebemdt.sb.uclllabs.be
+	ServerAlias www.arne-vandebemdt.sb.uclllabs.be
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html
