added header config for https

--- a/apache2/sites-available/supersecure.arne-vandebemdt.sb.uclllabs.be-le-ssl.conf
+++ b/apache2/sites-available/supersecure.arne-vandebemdt.sb.uclllabs.be-le-ssl.conf
@@ -1,5 +1,7 @@
 <IfModule mod_ssl.c>
 <VirtualHost *:443>
+
+    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
     ServerAdmin admin@mail.arne-vandebemdt.sb.uclllabs.be
     ServerName supersecure.arne-vandebemdt.sb.uclllabs.be
     DocumentRoot /var/www/supersecure.arne-vandebemdt.sb.uclllabs.be/html
