added ftp configuration for access

--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -28,7 +28,7 @@ anonymous_enable=NO
 local_enable=YES
 #
 # Uncomment this to enable any form of FTP write command.
-#write_enable=YES
+write_enable=YES
 #
 # Default umask for local users is 077. You may wish to change this to 022,
 # if your users expect that (022 is used by most other ftpd's)
@@ -153,3 +153,6 @@ ssl_enable=NO
 #
 # Uncomment this to indicate that vsftpd use a utf8 filesystem.
 #utf8_filesystem=YES
+user_sub_token=$USER
+local_root=/home/$USER/ftp
+
